--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,9 +8,9 @@ body{
 }
 
 /* Banner Styles */
-.banner-section{
+/* .banner-section{
+    position: relative;
     background-image: url(../images/Banner\ Image.png);
-    filter: brightness(40%);
     height: 600px;
     margin: 0px auto;
     font-family: Merriweather;
@@ -18,11 +18,48 @@ body{
     text-align: center;
     margin-bottom: 120px;
     border-radius: 16px;
-    
+    filter: brightness(40%);
 
     display: flex;
     justify-content: center;
     align-items: center;
+
+    overflow: hidden;
+} */
+
+.banner-section {
+    background-image: url(../images/Banner\ Image.png);
+    height: 600px;
+    margin: 0px auto 120px auto;
+    font-family: Merriweather;
+    color: white;
+    text-align: center;
+    border-radius: 16px;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    position: relative;
+    overflow: hidden; 
+    background-size: cover;
+    background-position: center;
+}
+
+.banner-section::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.55);
+    border-radius: 16px;
+    z-index: 1;
+}
+.content{
+    position: relative;
+    z-index: 2;
 }
 .sub-title{
     font-size: 32px;
@@ -45,6 +82,7 @@ body{
     font-family: Inter;
     margin: 0px auto;
     text-align: center;
+    margin-bottom: 140px;
 }
 .discoutn-title{
     color: #FF0000;
@@ -68,4 +106,68 @@ body{
 .offer-section img{
     width: 802.9px;
     height: 500px;
+}
+
+/* Party Section styling */
+.party-section{
+    background-position: center;
+    height: 600px;
+    border-radius: 16px;
+    background-image: url(../images/Vectorrr.png);
+    background-repeat: no-repeat;
+    color: white;
+    margin: 0px auto;
+    margin-bottom: 140px;
+    padding-left: 126px;
+    
+
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    overflow: hidden;
+
+    position: relative;
+    overflow: hidden; 
+    background-size: cover;
+}
+
+.party-section::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.55);
+    border-radius: 16px;
+    z-index: 1;
+}
+
+.party-section-content{
+    position: relative;
+    z-index: 2;
+}
+.party-greeting{
+    font-family: Merriweather;
+    font-size: 64px;
+}
+.party-description{
+    font-family: Inter;
+    font-size: 18px;
+    color: #FFFFFF;
+    margin-top: 24px;
+    width: 697px;
+}
+.join-btn{
+    font-weight: bold;
+    color: white;
+    font-size: 20px;
+    background-color: transparent;
+    border: none;
+}
+.party-greeting-one{
+    margin-bottom: 0px;
+}
+.party-greeting-two{
+    margin-top: 4px;
 }
