--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,6 +30,7 @@ body{
 .banner-section {
     background-image: url(../images/Banner\ Image.png);
     height: 600px;
+    width: 1320px;
     margin: 0px auto 120px auto;
     font-family: Merriweather;
     color: white;
@@ -112,13 +113,14 @@ body{
 .party-section{
     background-position: center;
     height: 600px;
+    width: 1320px;
     border-radius: 16px;
     background-image: url(../images/Vectorrr.png);
     background-repeat: no-repeat;
     color: white;
     margin: 0px auto;
     margin-bottom: 140px;
-    padding-left: 126px;
+    /* padding-left: 126px; */
     
 
     display: flex;
@@ -144,6 +146,7 @@ body{
 }
 
 .party-section-content{
+    margin-left: 126px;
     position: relative;
     z-index: 2;
 }
@@ -170,4 +173,45 @@ body{
 }
 .party-greeting-two{
     margin-top: 4px;
+}
+
+/* Date and Location Sections Styles */
+.date-location-section{
+    height: 482px;
+    background: linear-gradient(to bottom, #ffc0c0 10%, #ffffff 100%);
+    margin: 0px auto 120px auto;
+    width: 1320px;
+    border-radius: 16px;
+    text-align: center;
+
+    box-sizing: border-box;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    padding-left: 385px;
+    padding-right: 385px;
+
+    font-family: Inter;
+    font-size: 32px;
+    font-weight: 600px;
+
+}
+.date-location{
+    margin-bottom: 10px;
+    margin-top: 20px;
+}
+
+.date-location span{
+    color: #FF0000;
+}
+
+.date-location-join-btn{
+    background-color: #FF0000;
+    color: white;
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 16px 32px;
+    border-radius: 8px;
+    border: none;
+    margin-top: 48px;
 }
